WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37626
Fix horizontal scrollbar repainting.
https://bugs.webkit.org/show_bug.cgi?id=37626
Summary
Fix horizontal scrollbar repainting.
Anders Carlsson
Reported
2010-04-14 17:32:30 PDT
Fix horizontal scrollbar repainting.
Attachments
Patch
(8.24 KB, patch)
2010-04-14 17:38 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-04-14 17:38:12 PDT
Created
attachment 53388
[details]
Patch
Anders Carlsson
Comment 2
2010-04-14 17:46:48 PDT
Committed
r57621
: <
http://trac.webkit.org/changeset/57621
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug