WebKit2/Shared/mac/UpdateChunk.cpp
@@ -56,13 +56,13 @@ UpdateChunk::~UpdateChunk()
         vm_deallocate(mach_task_self(), reinterpret_cast<vm_address_t>(m_data), m_size);
 }
 
-void UpdateChunk::drawIntoContext(CGContextRef context)
+RetainPtr<CGImageRef> UpdateChunk::createImage()
 {
     RetainPtr<CGDataProviderRef> provider(AdoptCF, CGDataProviderCreateWithData(0, m_data, size(), 0));
     RetainPtr<CGColorSpaceRef> colorSpace(AdoptCF, CGColorSpaceCreateDeviceRGB());
     RetainPtr<CGImageRef> image(AdoptCF, CGImageCreate(m_rect.width(), m_rect.height(), 8, 32, m_rect.width() * 4, colorSpace.get(), kCGImageAlphaPremultipliedLast, provider.get(), 0, false, kCGRenderingIntentDefault));
-
-    CGContextDrawImage(context, CGRectMake(m_rect.x(), m_rect.y(), m_rect.width(), m_rect.height()), image.get());
+    
+    return image;
 }
 
 void UpdateChunk::encode(CoreIPC::ArgumentEncoder& encoder) const
