WebKit2/UIProcess/mac/DrawingAreaProxyUpdateChunk.h
@@ -57,10 +57,10 @@ public:
     }
 
 private:
-    void drawUpdateChunkIntoBackingStore(UpdateChunk&);
+    void drawUpdateChunkIntoBackingStore(UpdateChunk*);
     void ensureBackingStore();
 
-    void didSetSize(const WebCore::IntSize& viewSize, UpdateChunk& updateChunk);
+    void didSetSize(const WebCore::IntSize& viewSize, UpdateChunk* updateChunk);
 
     bool m_isInitialized;
     bool m_isWaitingForDidSetFrameNotification;
