WebKit2/WebProcess/WebPage/mac/DrawingAreaUpdateChunk.cpp
@@ -81,7 +81,11 @@ void DrawingAreaUpdateChunk::paintIntoUpdateChunk(UpdateChunk* updateChunk)
 {
     RetainPtr<CGColorSpaceRef> colorSpace(AdoptCF, CGColorSpaceCreateDeviceRGB());
     RetainPtr<CGContextRef> bitmapContext(AdoptCF, CGBitmapContextCreate(updateChunk->data(), updateChunk->rect().width(), updateChunk->rect().height(), 8, updateChunk->rect().width() * 4, colorSpace.get(), kCGImageAlphaPremultipliedLast));
-    
+
+    // WebCore expects a flipped coordinate system.
+    CGContextTranslateCTM(bitmapContext.get(), 0.0, updateChunk->rect().height());
+    CGContextScaleCTM(bitmapContext.get(), 1.0, -1.0);
+
     // Now paint into the backing store.
     GraphicsContext graphicsContext(bitmapContext.get());
     graphicsContext.translate(-updateChunk->rect().x(), -updateChunk->rect().y());
